--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<link rel="stylesheet" href="style.css" type="text/css">
+		<link rel="stylesheet" href="/css/style.css" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Ma premiere page HTML</title>
 	</head>
 	<body>
+		<header> 
+			<p>Premiere page</p>
+		</header>
+		<h1>Titre</h1>
+		<div class="fleur">
+			<img src="/assets/fleur.jpg" alt="fleur" />
+		</div>
+		<ol>
+			<li>Test1</li>
+			<li>Test2</li>
+		</ol>
+		<img src="/assets/Ada_Byron.png" alt="Ada" />
+		<ul>
+			<li>test1</li>
+			<li>test2</li>
+		</ul>
+	<footer>
+		<a href="https://adatechschool.fr/" target="_blank">Ada tech school</a> 			
+		<p>27/01/2026</p>
+	</footer>
+	</body>
 </html>
